# django_rest_book

./: Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
examples/: celery_app.py
k8s/: configs.yaml  deployment.yaml  migration-job.yaml  postgresql-service.yaml  redis-service.yaml  redis-statefulset.yaml  secrets.yaml  services.yaml  statefulset-postgresql.yaml
src/: Dockerfile  db.sqlite3  download_movies.py  gunicorn.conf.py  manage.py  test_example.py
src/api_auth/: apps.py  permissions.py  urls.py
src/movies/: admin.py  api.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py
src/movies/migrations/: 0001_initial.py  0002_movie_country_movie_extra_data_movie_release_year.py  0003_usermoviepreferences.py  0004_alter_movie_unique_together.py
src/movies/tests/: factories.py  test_api.py  test_serializers.py
src/recommendation_system/: asgi.py  base.py  celery.py  dev.py  production.py  production_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
src/recommendations/: services.py  tests.py
src/tests/: factories.py
